# mirea-spring-hac

./: .env.example  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_domain_core.py  0003_kase2_schema_upgrade.py  0004_bot_dialog_slot.py  0005_broadcast_created_by_nullable.py  0006_bot_dialog_skip_phone.py  0007_admin_roles_event_owner.py  (+6 more)
backend/app/: cli.py  main.py
backend/scripts/: seed_catalog.py  seed_demo.py  seed_demo_events.py
backend/tests/: conftest.py  factories.py  test_admin_broadcasts_api.py  test_admin_events_api.py  test_admin_fields_api.py  test_admin_registrations_search.py  test_admin_slots_api.py  test_admin_stats_api.py  test_admin_team_api.py  test_admin_uploads_api.py  test_auth_login.py  test_bot_catalog.py  test_bot_dialog_slot.py  test_bot_dispatcher.py  test_bot_integration.py  test_bot_keyboards.py  test_bot_mine.py  test_bot_onboarding.py  test_bot_qr.py  test_bot_registration.py  test_broadcast_model.py  test_capacity_service.py  test_catalog_filter.py  test_config.py  test_consent_log_model.py  test_consent_service.py  test_db.py  test_deps.py  test_event_extended.py  test_event_model.py  test_event_service.py  test_event_slot.py  test_form_field_service.py  test_health.py  test_init_data.py  test_long_poll.py  test_max_client.py  test_max_webhook.py  test_media_model.py  test_media_service.py  (+15 more)
(+128 files in other folders)
