[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirea-spring-hac-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "apscheduler>=3.10.0",
    "qrcode>=7.4.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
maxbot = "app.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008", "UP042"]  # B008: FastAPI Depends; UP042: str+Enum pattern is intentional
